@@ -1,7 +1,9 @@
 package com.vinurl.exe;
 
 import com.vinurl.VinURL;
+import com.vinurl.VinURLClient;
 import org.apache.commons.lang3.SystemUtils;
+
 import java.io.*;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -16,85 +18,98 @@ import java.util.zip.ZipInputStream;
 
 public class Executable {
 
-    static void checkForExecutable(String FileName, File Directory, Path FilePath, String RepositoryFile, String RepositoryName) throws IOException, URISyntaxException {
-        if(!Directory.exists() && !Directory.mkdirs()) {
-            throw new IOException();
-        }
-        if (!FilePath.toFile().exists()) {downloadExecutable(FileName, FilePath, RepositoryFile, RepositoryName);}
-        else if (VinURL.CONFIG.currentData.UpdateCheckingOnStartup){
-            checkForUpdates(FileName, FilePath, RepositoryFile, RepositoryName);
-        }
-    }
+	static void checkForExecutable(String fileName, File directory, String repositoryFile, String repositoryName) throws IOException, URISyntaxException {
+		Path filePath = getFilePath(fileName, directory);
 
-    static boolean checkForUpdates(String FileName, Path FilePath, String RepositoryFile, String RepositoryName) {
-        try{
-            if (!currentVersion(FilePath.getParent().resolve("version.txt")).equals(latestVersion(RepositoryName))){
-                Files.deleteIfExists(FilePath);
-                downloadExecutable(FileName, FilePath, RepositoryFile, RepositoryName);
-                return true;
-            }
-            return false;
-        }
-        catch (Exception ignored){
-            return false;
-        }
-    }
+		if (directory.exists() || directory.mkdirs()) {
+			if (!filePath.toFile().exists()) {
+				downloadExecutable(fileName, filePath, repositoryFile, repositoryName);
+			} else if (VinURLClient.CONFIG.UpdateCheckingOnStartup()) {
+				checkForUpdates(fileName, directory, repositoryFile, repositoryName);
+			}
+		}
+	}
 
-    static void downloadExecutable(String FileName, Path FilePath, String RepositoryFile, String RepositoryName) throws IOException, URISyntaxException {
-        try (InputStream inputStream = getDownloadInputStream(RepositoryFile,RepositoryName)) {
-            if (RepositoryFile.endsWith(".zip")) {
-                try (ZipInputStream zipInput = new ZipInputStream(inputStream)) {
-                    ZipEntry zipEntry = zipInput.getNextEntry();
-                    while (zipEntry != null) {
-                        if (zipEntry.getName().endsWith(FileName)) {
-                            Files.copy(zipInput, FilePath, StandardCopyOption.REPLACE_EXISTING);
-                            break;
-                        }
-                        zipEntry = zipInput.getNextEntry();
-                    }
-                }
-            }
-            else {
-                Files.copy(inputStream, FilePath, StandardCopyOption.REPLACE_EXISTING);
-            }
-            if (SystemUtils.IS_OS_UNIX) {
-                Runtime.getRuntime().exec(new String[]{"chmod", "+x", FilePath.toString()});
-            }
-            createVersionFile(latestVersion(RepositoryName), FilePath.getParent().resolve("version.txt"));
-        }
-    }
+	static boolean checkForUpdates(String fileName, File directory, String repositoryFile, String repositoryName) {
+		try {
+			Path filePath = getFilePath(fileName, directory);
+			if (!currentVersion(filePath.getParent().resolve("version.txt")).equals(latestVersion(repositoryName))) {
+				Files.deleteIfExists(filePath);
+				downloadExecutable(fileName, filePath, repositoryFile, repositoryName);
+				return true;
+			}
+			return false;
+		} catch (Exception ignored) {
+			return false;
+		}
+	}
 
-    static void createVersionFile(String version, Path versionFilePath) throws IOException {
-        try (FileWriter writer = new FileWriter(versionFilePath.toFile())) {
-            writer.write(version);
-        }
-    }
+	private static void downloadExecutable(String fileName, Path filePath, String repositoryFile, String repositoryName) throws IOException, URISyntaxException {
+		try (InputStream inputStream = getDownloadInputStream(repositoryFile, repositoryName)) {
+			if (repositoryFile.endsWith(".zip")) {
+				try (ZipInputStream zipInput = new ZipInputStream(inputStream)) {
+					ZipEntry zipEntry = zipInput.getNextEntry();
+					while (zipEntry != null) {
+						if (zipEntry.getName().endsWith(fileName)) {
+							Files.copy(zipInput, filePath, StandardCopyOption.REPLACE_EXISTING);
+							break;
+						}
+						zipEntry = zipInput.getNextEntry();
+					}
+				}
+			} else {
+				Files.copy(inputStream, filePath, StandardCopyOption.REPLACE_EXISTING);
+			}
+			if (SystemUtils.IS_OS_UNIX) {
+				Runtime.getRuntime().exec(new String[]{"chmod", "+x", filePath.toString()});
+			}
+			createVersionFile(latestVersion(repositoryName), filePath.getParent().resolve("version.txt"));
+		}
+	}
 
-    static String currentVersion(Path FilePath) throws IOException {
-        try (BufferedReader reader = new BufferedReader(new FileReader(FilePath.toFile()))) {
-            return reader.readLine().trim();
-        }
-    }
+	private static void createVersionFile(String version, Path versionFilePath) throws IOException {
+		try (FileWriter writer = new FileWriter(versionFilePath.toFile())) {
+			writer.write(version);
+		}
+	}
 
-    static String latestVersion(String RepositoryName){
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(new URL(String.format("https://api.github.com/repos/%s/releases/latest",RepositoryName)).openStream()))) {
-            return reader.readLine().split("\"tag_name\":\"")[1].split("\",\"target_commitish\"")[0];
-        } catch (IOException | ArrayIndexOutOfBoundsException e) {
-            return "";
-        }
-    }
+	private static String currentVersion(Path filePath) throws IOException {
+		try (BufferedReader reader = new BufferedReader(new FileReader(filePath.toFile()))) {
+			return reader.readLine().trim();
+		}
+	}
 
-    private static InputStream getDownloadInputStream(String RepositoryFile, String RepositoryName) throws IOException, URISyntaxException {
-        return new URI(String.format("https://github.com/%s/releases/latest/download/%s",RepositoryName,RepositoryFile)).toURL().openStream();
-    }
+	private static String latestVersion(String repositoryName) {
+		try (BufferedReader reader = new BufferedReader(new InputStreamReader(new URL(String.format("https://api.github.com/repos/%s/releases/latest", repositoryName)).openStream()))) {
+			return reader.readLine().split("\"tag_name\":\"")[1].split("\",\"target_commitish\"")[0];
+		} catch (IOException | ArrayIndexOutOfBoundsException e) {
+			return "";
+		}
+	}
 
-    static void executeCommand(String executable, String ... arguments) throws IOException, InterruptedException {
-        Process process = Runtime.getRuntime().exec(Stream.concat(Stream.of(executable),Arrays.stream(arguments)).toArray(String[]::new));
-        try (BufferedReader errorReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))){
-            for (String line; (line = errorReader.readLine()) != null;) {
-                VinURL.LOGGER.info(line);
-            }
-        }
-        if (process.waitFor() != 0){throw new IOException();}
-    }
+	private static InputStream getDownloadInputStream(String repositoryFile, String repositoryName) throws IOException, URISyntaxException {
+		return new URI(String.format("https://github.com/%s/releases/latest/download/%s", repositoryName, repositoryFile)).toURL().openStream();
+	}
+
+	static boolean executeCommand(String fileName, File directory, String... arguments) {
+		try {
+			Process process = Runtime.getRuntime().exec(Stream.concat(Stream.of(getFilePath(fileName, directory).toString()), Arrays.stream(arguments)).toArray(String[]::new));
+
+			try (BufferedReader errorReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
+				for (String line; (line = errorReader.readLine()) != null; ) {
+					VinURL.LOGGER.info(line);
+				}
+				if (process.waitFor() != 0) {
+					throw new IOException();
+				}
+			}
+			return true;
+		} catch (IOException | InterruptedException e) {
+			return false;
+		}
+	}
+
+	private static Path getFilePath(String fileName, File directory) {
+		return directory.toPath().resolve(fileName);
+	}
 }
